@@ -4,6 +4,7 @@ python-django-appconf (1.0.1-1) experimental; urgency=medium
   * Fixed upstream VCS URLs.
   * Switche to debhelper 9.
   * Fixed watch file to use Github tags and not broken PyPi.
+  * Running unit tests at build time.
 
  -- Thomas Goirand <zigo@debian.org>  Sat, 12 Sep 2015 15:40:24 +0200
 
